--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "g": "^2.0.1",
     "mongoose": "^5.9.10",
     "nodemon": "^2.0.3",
     "react": "^16.13.1",
@@ -17,10 +19,12 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "2.1.8",
+    "typescript": "^3.9.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "webpack": "webpack",
+    "start": "npm run webpack && nodemon --exec babel-node -- bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@webpack-cli/migrate": "^0.1.9",
+    "webpack-cli": "^3.3.11"
   }
 }
