--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "nodemon": "^2.0.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-create-app": "^2.0.6",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8",
+    "react-script": "^2.0.5",
+    "react-scripts": "^3.4.1",
     "typescript": "^3.9.3"
   },
   "scripts": {
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@webpack-cli/migrate": "^0.1.9",
+    "babel-preset-es2015": "^6.24.1",
     "webpack-cli": "^3.3.11"
   }
 }
